[package]
name = "pnket"
version = "0.2.2"
edition = "2021"
description = "A simple download manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tar = "0.4"
structopt = "0.3"
zstd = "0.4"
indicatif = "0.17.3"
futures-util = "0.3.26"
